# MadridSmartData

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: README.md
src/ingest/: ReadCSV.py  ReadParquet.py  Read_parquet_by_month.py  count_row_total.py  csvparquet.py  fast_csvparquet.py.py
src/interface/: .env.template  README.md  first_tab.py  fourth_tab.py  interface.py  second_tab.py  third_tab.py
src/preprocessing/: .env.template  Distric_Preprocessing.py  QualityAir_Station_Preprocessing.py  README.md  Traffic_Preproccessing.py
