[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "folium>=0.20.0",
    "geopandas==1.0.1",
    "gradio==4.44.1",
    "matplotlib==3.9.4",
    "pyspark==3.4.4",
    "shapely==2.0.7",
]
